--- a/site/Projetos/planta.html
+++ b/site/Projetos/planta.html
@@ -18,7 +18,7 @@
 <body>
     <a class="botao" href="../../index.html">Voltar ao inicio</a>    
     <hr>
-    <h1>Planta da cozinha</h1>
+    <h1 class="center">Planta da cozinha</h1>
     <hr><br>
     <p> Este é o projeto pessoal da reforma da cozinha da minha residência, onde temos a planta baixa com a
         instalação elétrica do cômodo. </p>
@@ -36,6 +36,7 @@
     <p class="center"><img src="../imagens/autocad2.png" width="100"></p>
     <br><br><br>
 </body>
+
 
 
 
